--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <lombok.version>1.18.28</lombok.version>
         <reflections.version>0.10.2</reflections.version>
         <junit.version>5.10.0</junit.version>
+        <slf4j.version>2.0.9</slf4j.version>
         <maven.surefire.version>3.1.2</maven.surefire.version>
     </properties>
 
@@ -48,6 +49,19 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
