--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <gson.version>2.10.1</gson.version>
         <lombok.version>1.18.28</lombok.version>
         <reflections.version>0.10.2</reflections.version>
+        <javax.version>1.3.2</javax.version>
         <junit.version>5.10.0</junit.version>
         <slf4j.version>2.0.9</slf4j.version>
         <maven.surefire.version>3.1.2</maven.surefire.version>
@@ -42,6 +43,12 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>${reflections.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${javax.version}</version>
         </dependency>
 
         <dependency>
