feat(): Huge update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-labelsPath=storage/labels.json
-postsPath=storage/posts.json
-writersPath=storage/writers.json
+the.io.magazine.label.path=storage/labels.json
+the.io.magazine.posts.path=storage/posts.json
+the.io.magazine.writers.path=storage/writers.json
+the.io.magazine.message.title.text=The IO Magazine
+the.io.magazine.message.sign.text=since January 8, 1610.
+the.io.magazine.message.main.text=TODO
